--- a/index.html
+++ b/index.html
@@ -67,130 +67,119 @@
 </head>
 
 <body>
-    <h1>Whack-a-Mole Game</h1>
-    <!-- Score and Timer displays -->
-    <div id="score-board">Score: 0</div>
-    <div id="timer">Time Left: 10s</div>
-    <!-- Start Game button -->
-    <button id="startButton">Start Game</button>
-    <!-- Game grid containing holes and moles -->
-    <div class="grid">
-        <div class="hole" id="hole1">
-            <div class="mole"></div>
-        </div>
-        <div class="hole" id="hole2">
-            <div class="mole"></div>
-        </div>
-        <div class="hole" id="hole3">
-            <div class="mole"></div>
-        </div>
-        <div class="hole" id="hole4">
-            <div class="mole"></div>
-        </div>
-        <div class="hole" id="hole5">
-            <div class="mole"></div>
-        </div>
-        <div class="hole" id="hole6">
-            <div class="mole"></div>
-        </div>
+<h1>Whack-a-Mole Game</h1>
+<!-- Score and Timer displays -->
+<div id="score-board">Score: 0</div>
+<div id="timer">Time Left: 10s</div>
+<!-- Start Game button -->
+<button id="startButton">Start Game</button>
+<!-- Game grid containing holes and moles -->
+<div class="grid">
+    <div class="hole" id="hole1">
+        <div class="mole"></div>
     </div>
+    <div class="hole" id="hole2">
+        <div class="mole"></div>
+    </div>
+    <div class="hole" id="hole3">
+        <div class="mole"></div>
+    </div>
+    <div class="hole" id="hole4">
+        <div class="mole"></div>
+    </div>
+    <div class="hole" id="hole5">
+        <div class="mole"></div>
+    </div>
+    <div class="hole" id="hole6">
+        <div class="mole"></div>
+    </div>
+</div>
 
-    <script>
-        // Set up local variables
-        // Hint: Declare variables for score, currentHole, gameTimer, timeLeft, moleVisible, etc.
+<script>
+    // Set up local variables
+    score = 0;
+    currentHole = null;
+    gameTimer = null;
+    countdownTimer = null;
+    timeLeft = 10;
+    moleVisible = false;
 
+    // Get references to DOM elements
+    const startButton = document.getElementById('startButton');
+
+    // Add event listener to the start button
+    startButton.addEventListener('click', startGame);
+
+    function startGame() {
+        // Reset game variables
         score = 0;
-        currentHole = null;
-        gameTimer = null;
         timeLeft = 10;
         moleVisible = false;
+        document.getElementById('score-board').textContent = `Score: ${score}`;
+        document.getElementById('timer').textContent = `Time Left: ${timeLeft}s`;
 
-        // Get references to DOM elements
-        const startButton = document.getElementById('startButton');
+        gameTimer = setInterval(randomHole, 1000);
+        countdownTimer = setInterval(countdown, 1000);
+    }
 
-        // Add event listener to the start button
-        startButton.addEventListener('click', startGame);
+    function countdown() {
+        timeLeft--;
+        document.getElementById('timer').textContent = `Time Left: ${timeLeft}s`;
+        if (timeLeft === 0) {
+            endGame();
+        }
+    }
 
-        // TODO: start game logic
-        function startGame() {
-            // Algorithm:
-            // 1. Reset game variables: score starts at 0, timer starts at max, mole visibility, etc.
-            score = 0;
-            timeLeft = 10;
+    function randomHole() {
+        // Hide the mole in the previous hole (if any)
+        if (currentHole) {
+            currentHole.querySelector('.mole').style.display = 'none';
+        }
+
+        // Generate a random index to select a new hole
+        const holes = document.querySelectorAll('.hole');
+        const randomIndex = Math.floor(Math.random() * holes.length);
+        currentHole = holes[randomIndex];
+
+        // Show the mole in the new hole
+        const mole = currentHole.querySelector('.mole');
+        mole.style.display = 'block';
+        moleVisible = true;
+    }
+
+    function whack(event) {
+        // Check if the mole is visible
+        if (event.target.style.display !== 'none') {
+            score++; // Increment the score
+            document.getElementById('score-board').textContent = `Score: ${score}`; // Update the score display
+            event.target.style.display = 'none'; // Hide the mole
             moleVisible = false;
-            document.getElementById('score-board').textContent = `Score: ${score}`;
-            document.getElementById('timer').textContent = `Time Left: ${timeLeft}s`;
-
-            gameTimer = setInterval(randomHole, 1000);
-            countdownTimer = setInterval(countdown, 1000);
-
-            // Countdown timer
-            function countdown() {
-                timeLeft--;
-                document.getElementById('timer').textContent = `Time Left: ${timeLeft}s`;
-                if (timeLeft === 0) {
-                    endGame();
-                }
-            }
-
-            // 2. Update JS variables and HTML elements to reflect this.
-
-
-            // 3. Start the mole movement interval using setInterval().
-            //    e.g., - gameTimer = setInterval(randomHole, 1000); // Move mole every second
-            // 4. Start the countdown timer using setInterval().
-
         }
+    }
 
-        // TODO: mole movement logic
-        function randomHole() {
-            // Algorithm:
-            // 1. Hide the mole in the previous hole (if any).
-            // 2. Generate a random index to select a new hole. 
-            //      hint: you need to then find all "mole holes" and randomly choose one from the list.           
-            // 3. Show the mole in the new hole.            
-            // 4. Add a click event listener to the mole to handle "whacking".
-        }
+    // Add event listeners to all moles
+    document.querySelectorAll('.mole').forEach(mole => {
+        mole.addEventListener('click', whack);
+    });
 
-        // TODO: whack mole game logic
-        function whack() {
-            // Algorithm:
-            // 0. if the mole is visible...
-            // 1. Increase the score.           
-            // 2. Update the score display in the HTML.           
-            // 3. Hide the mole after it's whacked.            
-        }
+    function endGame() {
+        // Stop the mole movement and countdown timers
+        clearInterval(gameTimer);
+        clearInterval(countdownTimer);
 
-        // TODO: end game logic function
-        function endGame() {
-            // Algorithm:
-            // 1. Stop the mole movement and countdown timers using clearInterval().
-            clearInterval(gameTimer);
-            clearInterval(countdownTimer);
+        // Hide any remaining mole on the grid
+        const moles = document.querySelectorAll('.mole');
+        moles.forEach(mole => mole.style.display = 'none');
 
-            // 2. Hide any remaining mole on the grid.
-            const moles = document.querySelectorAll('.mole');
-            moles.forEach(mole => mole.style.display = 'none');
+        alert(`Game Over! Your final score is: ${score}`);
 
-            // 3. Display an alert or message showing the final score.
-            alert(`Game Over! Your final score is: ${score}`);
-
-            // 4. Reset the game to allow playing again.
-            score = 0;
-            timeLeft = 10;
-            document.getElementById('score-board').textContent = `Score: ${score}`;
-            document.getElementById('timer').textContent = `Time Left: ${timeLeft}s`;
-        }
-        // Helpful Tips:
-        // - Use setInterval() to create "loops" for mole movement and countdown timer.
-        // - Use Math.random() and Math.floor() to select a random hole.
-        // - Use querySelectorAll() to get all hole elements and store them in a variable.
-        // - Manipulate the DOM to show and hide moles using style.display or classList methods.
-        // - Remember to remove event listeners if necessary to prevent multiple bindings.
-        // - Remember to clear intervals if you are done with them!
-        // - Keep track of the game's state using variables (e.g., is the mole visible?).
-        // - Test each function individually to ensure it works before moving on.
-    </script>
+        // Reset the game
+        score = 0;
+        timeLeft = 10;
+        document.getElementById('score-board').textContent = `Score: ${score}`;
+        document.getElementById('timer').textContent = `Time Left: ${timeLeft}s`;
+    }
+</script>
 </body>
 
 </html>
